--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sstable (0.1.1-1) unstable; urgency=low
+
+  * Initialize members in __init__
+
+ -- Anton Kortunov <toshik@yandex-team.ru>  Wed, 09 Nov 2011 16:33:03 +0400
+
 sstable (0.1.0-1) unstable; urgency=low
 
   * source package automatically created by stdeb 0.5.1
