--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sstable (0.2.0-1) unstable; urgency=low
+
+  * Second version of sstable - use chunks to store data
+
+ -- Anton Kortunov <toshik@yandex-team.ru>  Wed, 10 Nov 2011 23:39:50 +0400
+
 sstable (0.1.1-1) unstable; urgency=low
 
   * Initialize members in __init__
