--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sstable (0.2.1-1) unstable; urgency=low
+
+  * Fixed bug with incorrect chunks count in header 
+
+ -- Anton Kortunov <toshik@yandex-team.ru>  Wed, 23 Nov 2011 21:56:11 +0400
+
 sstable (0.2.0-1) unstable; urgency=low
 
   * Second version of sstable - use chunks to store data
